fix dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@
     --pico-font-family: Arial Rounded MT Bold, sans-serif;
 }
 
-body {
+html {
     background-color: beige;
+}
+
+@media (prefers-color-scheme: dark) {
+    html {
+        background-color: darkslategrey;
+    }
 }
